simple/bluegreen/service-preview.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bluegreen
    app.kubernetes.io/component: bluegreen
    app.kubernetes.io/instance: bluegreen
  name: bluegreen-preview
  namespace: argo-rollout-simple
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: 8443-tcp
    port: 8443
    protocol: TCP
    targetPort: 8443
  selector:
    app: bluegreen
  sessionAffinity: None
  type: ClusterIP
