simple/bluegreen/route-preview.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: bluegreen
    app.kubernetes.io/component: bluegreen
    app.kubernetes.io/instance: argo-rollout-simple
  name: bluegreen-preview
  namespace: argo-rollout-simple
spec:
  host: bluegreen-preview-argo-rollout-simple.apps.ocp4.private.opequon.net
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: bluegreen-preview
    weight: 100
  wildcardPolicy: None
