simple/bluegreen/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: test
    app.kubernetes.io/component: test
    app.kubernetes.io/instance: test
  name: test
  namespace: argo-rollout-simple
spec:
  host: test-argo-rollout-simple.apps.ocp4.private.opequon.net
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: test
    weight: 100
  wildcardPolicy: None
